Downgrade to JDK 17